discussion/kv_engine/184911/184911_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54884: Add ep stats for tracking magma data blocks

Adding...

ep_data_blocks_size = aggregate of magmaStats.DataBlocksSize
    uncompressed size of data blocks from seqIndex
ep_data_blocks_compress_size = aggregate of
        magmaStats.DataBlocksCompressSize
    uncompressed size of data blocks from seqIndex
ep_data_blocks_compression_ratio
    ep_data_blocks_size / ep_data_blocks_compress_size

unit is percentage
ep_data_blocks_space_reduction_estimate
    ((ep_data_blocks_size - ep_data_blocks_compress_size) /
      ep_data_blocks_size)  * 100

Change-Id: If3ee8778475f3cba739be444cde7b9056eaaab06

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2023-01-19 21:47:25.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-19 21:47:39.000000000
Message: 
Patch Set 2: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/333407/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-19 22:25:20.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/881/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46: error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksSize", magmaStats->DataBlocksSize);
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3390:54: error: no member named "DataBlocksCompressSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksCompressSize", magmaStats->DataBlocksCompressSize);
                                                     ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/881/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/881/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1064/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(3389): error C2039: "DataBlocksSize": is not a member of "magma::Magma::MagmaStats" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1064/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/852/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/852/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/901/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/901/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/892/ : FAILURE

Compile error at [2023-01-19T22:18:02.964Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/892/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/894/ : FAILURE

Compile error at [2023-01-19T22:21:09.473Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/894/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1176/ : FAILURE

Compile error at [2023-01-19T21:50:40.889Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1176/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/873/ : FAILURE

Compile error at [2023-01-19T22:24:16.095Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/873/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/889/ : FAILURE

Compile error at [2023-01-19T22:06:45.153Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3389:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/889/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22304/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/902/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
